# sii_addon

./: .gitignore  README.md  package.json  pyproject.toml
services/: index.js  package-lock.json  package.json
sii_addon/: hooks.py  modules.txt
sii_addon/sii_addon/doctype/cuenta_sii/: cuenta_sii.js  cuenta_sii.json  cuenta_sii.py  test_cuenta_sii.py
sii_addon/sii_addon/doctype/dte/: dte.js  dte.json  dte.py  test_dte.py
sii_addon/sii_addon/doctype/dte_item_definitions/: dte_item_definitions.js  dte_item_definitions.json  dte_item_definitions.py  test_dte_item_definitions.py
sii_addon/sii_addon/doctype/dte_item_definitions_table/: dte_item_definitions_table.json  dte_item_definitions_table.py
siicl/: package.json  vite.config.ts
user_data/: DevToolsActivePort  Local State
user_data/Default/: DIPS  Favicons  History  Network Persistent State  Preferences  TransportSecurity  Visited Links  Web Data
user_data/Default/DawnCache/: index
user_data/Default/Extension Rules/: LOG
user_data/Default/Extension Scripts/: LOG
user_data/Default/Extension State/: LOG
user_data/Default/GPUCache/: data_0  data_1  data_2  index
user_data/Default/Session Storage/: LOG
user_data/Default/Sessions/: Session_13354914396213300  Tabs_13354914404903377
user_data/Default/Site Characteristics Database/: LOG
user_data/Default/Sync Data/LevelDB/: LOG
user_data/Default/shared_proto_db/: LOG
user_data/GrShaderCache/: data_0  data_1  index
user_data/GraphiteDawnCache/: index
user_data/ShaderCache/: index
user_data/segmentation_platform/: ukm_db  ukm_db-journal
(+74 files in other folders)
